--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -17,7 +17,11 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y subversion rsync
-
+          
+      - name: Install dotenv
+        run: |
+          python3 -m pip install python-dotenv
+          
       - name: Check out repository
         uses: actions/checkout@v4
         with:
