--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install SVN and rsync
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y subversion rsync
+          sudo apt-get install -y subversion rsync git-svn
           
       - name: Check out repository
         uses: actions/checkout@v4
@@ -35,11 +35,7 @@ jobs:
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.OLEX2_GUI_DEPLOY_KEY }}
-      # Important: Configure Git user for commits made by the action
-      - name: Configure Git User
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
 
       - name: Fetch submodules
         run: |
