--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install SVN and rsync
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y subversion rsync git-svn
+          sudo apt-get install -y subversion rsync git git-svn
           
       - name: Check out repository
         uses: actions/checkout@v4
