--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -10,11 +10,12 @@ on:
 
 jobs:
   sync:
-    runs-on: ubuntu-22.04 # Use a Linux runner
+    runs-on: ubuntu-latest # Use a Linux runner
 
     steps:
       - name: Install SVN and rsync
         run: |
+          sudo add-apt-repository ppa:git-core/ppa
           sudo apt-get update -y
           sudo apt-get install -y rsync git-svn
           
