--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Install SVN and rsync
         run: |
-          sudo add-apt-repository ppa:git-core/ppa
+          sudo add-apt-repository ppa:git-core/ppa -y
           sudo apt-get update -y
           sudo apt-get install -y rsync git-svn
           
@@ -27,15 +27,6 @@ jobs:
           # Use a Personal Access Token (PAT) if you need to trigger other workflows
           # Or if the default GITHUB_TOKEN doesn't have enough permissions (e.g., cross-repo)
           # token: ${{ secrets.YOUR_PAT }} # Usually not needed for same-repo pushes
-
-      - name: Initialize Git SVN (if not already initialized)
-        run: |
-          if [ ! -d ".git/svn" ]; then
-            git svn init --prefix=svn/ --no-metadata --trunk=trunk http://svn.olex2.org/olex2-gui olex2-gui-git
-            cd olex2-gui-git 
-            git branch -a
-            cd ..
-          fi
 
       - name: Configure Git User
         run: |
@@ -52,6 +43,15 @@ jobs:
         run: |
           git submodule update --init --recursive
       
+      - name: Initialize Git SVN (if not already initialized)
+        run: |
+          if [ ! -d ".git/svn" ]; then
+            git svn init --prefix=svn/ --no-metadata --trunk=trunk http://svn.olex2.org/olex2-gui olex2-gui-git
+            cd olex2-gui-git 
+            git branch -a
+            cd ..
+          fi
+
       - name: Run SVN to Git Sync Script
         id: sync_script
         run: |
