--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Initialize Git SVN (if not already initialized)
         run: |
           if [ ! -d ".git/svn" ]; then
-            git svn init --prefix=svn/ --no-metadata --trunk=trunk http://svn.olex2.org/olex2-gui olex2-gui-git
+            git svn init --prefix=svn/ --trunk=trunk http://svn.olex2.org/olex2-gui olex2-gui-git
             cd olex2-gui-git 
             git branch -a
             cd ..
