--- a/.github/workflows/syncpy.yml
+++ b/.github/workflows/syncpy.yml
@@ -43,14 +43,19 @@ jobs:
         run: |
           git submodule update --init --recursive
       
+      - name: Cache .git directory
+        uses: actions/cache@v4
+        id: cache-git
+        path: olex2-gui-git/.git
+        key: git-svn-${{ github.sha }} # Use a unique key for initial setup
+
       - name: Initialize Git SVN (if not already initialized)
+        if: steps.cache-git.outputs.cache-hit != 'true'
         run: |
-          if [ ! -d ".git/svn" ]; then
-            git svn init --prefix=svn/ --trunk=trunk http://svn.olex2.org/olex2-gui olex2-gui-git
-            cd olex2-gui-git 
-            git branch -a
-            cd ..
-          fi
+          git svn init --prefix=svn/ --trunk=trunk http://svn.olex2.org/olex2-gui olex2-gui-git
+          cd olex2-gui-git 
+          git branch -a
+          cd ..
 
       - name: Run SVN to Git Sync Script
         id: sync_script
